--- a/site/css/components/search-overlay.css
+++ b/site/css/components/search-overlay.css
@@ -28,9 +28,12 @@
 .mg-search-panel {
   position: absolute;
   top: 74px;
-  left: 255px;
-  right: 55px;
-  max-width: 1440px;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1200px;
+  width: calc(100% - 40px);
   z-index: 3;
   background: var(--color-bg);
   border: 1.5px solid var(--color-gold);
